# nexo-plugin-telegram

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  nexo-plugin.toml
.github/workflows/: ci.yml  release.yml
src/: auto_discovery.rs  bot.rs  config.rs  configured_state.rs  env_config.rs  lib.rs  main.rs  plugin.rs  subprocess_dispatch.rs  tool.rs
tests/: configure_path.rs  credentials_path.rs  e2e_handshake.rs
